Avoid overflowing items on search dialog

--- a/docs/src/components/Search/SearchBar.css
+++ b/docs/src/components/Search/SearchBar.css
@@ -377,6 +377,7 @@
     display: flex;
     min-height: 0;
     flex: 1;
+    overflow: hidden;
 
     &:has(.SearchScrollAreaViewport:focus-visible) {
       outline: 2px solid var(--gray-t2);
